<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".auth.LoginActivity">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/compose"
            android:contentDescription="@string/image_logo" />

        <EditText
            android:id="@+id/et_emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_email_address"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/chk_rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/forget_password" />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>